kubernetes/apps/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webserver-rs
    namespace: webserver-rs
spec:
    replicas: 2
    selector:
        matchLabels:
            app: webserver-rs
    template:
        metadata:
            labels:
                app: webserver-rs
        spec:
            containers:
                - name: webserver-rs
                  image: ghcr.io/jzvolensky/webserver-rs:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                  livenessProbe:
                      httpGet:
                          path: /api/health
                          port: 3000
                  readinessProbe:
                      httpGet:
                          path: /api/health
                          port: 3000
