kubernetes/apps/webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: webserver-rs
    namespace: argocd
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
    ingressClassName: traefik
    rules:
        - host: jzvolensky.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: webserver-rs
                            port:
                                number: 80
        - host: www.jzvolensky.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: webserver-rs
                            port:
                                number: 80
